[gd_scene load_steps=4 format=3 uid="uid://bybrydiuuci6f"]

[ext_resource type="Script" uid="uid://c5slk233hhrfv" path="res://Scenes/Segments/Repairing.gd" id="1_h08ad"]
[ext_resource type="Texture2D" uid="uid://dkufkybsvj4qc" path="res://Assets/Images/Segments/Repairing/UNO.png" id="2_lwb0a"]
[ext_resource type="Material" uid="uid://dvsb6etqunbde" path="res://Assets/Shaders/Light.tres" id="3_ecldb"]

[node name="Repairing" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_h08ad")

[node name="Uno" type="Sprite2D" parent="."]
position = Vector2(406, -154)
scale = Vector2(0.9, 0.9)
texture = ExtResource("2_lwb0a")

[node name="Light1" type="Sprite2D" parent="Uno"]
material = ExtResource("3_ecldb")
position = Vector2(180, 58.8889)
scale = Vector2(1.11111, 1.11111)

[node name="Light2" type="Sprite2D" parent="Uno"]
material = ExtResource("3_ecldb")
position = Vector2(82.2222, 86.6667)
scale = Vector2(1.11111, 1.11111)

[node name="Light3" type="Sprite2D" parent="Uno"]
material = ExtResource("3_ecldb")
position = Vector2(-35.5556, 101.111)
scale = Vector2(1.11111, 1.11111)

[node name="Light4" type="Sprite2D" parent="Uno"]
material = ExtResource("3_ecldb")
position = Vector2(-131.111, 78.8889)
scale = Vector2(1.11111, 1.11111)

[node name="Light5" type="Sprite2D" parent="Uno"]
position = Vector2(-185.556, 33.3333)
scale = Vector2(1.11111, 1.11111)

[node name="HFlow" type="HFlowContainer" parent="."]
custom_minimum_size = Vector2(800, 300)
layout_mode = 0
offset_left = -953.0
offset_top = -331.0
offset_right = -53.0
offset_bottom = -31.0
scale = Vector2(1.3, 1.3)
mouse_filter = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 20
alignment = 1
last_wrap_alignment = 2

[node name="Hbox" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(800, 228)
layout_mode = 0
offset_left = -872.0
offset_top = 181.0
offset_right = 128.0
offset_bottom = 409.0
mouse_filter = 2
theme_override_constants/separation = 17
alignment = 1
